# backend-challenge

./: .gitignore  Pipfile  README.md  WRITEUP.md  app.py  bootstrap.py  clubs.json  index.py  models.py  pyproject.toml  scraper.py
reference-frontend/: package.json
reference-frontend/public/: index.html
reference-frontend/src/: App.js  index.js
reference-frontend/src/components/: clubCard.js  clubCardList.js  header.js  metadata.js
reference-frontend/src/pages/: home.js  submit.js
